objects/AccountEnergyUsage__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Energy_Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Annual Volume is a number with two decimal points that is the absolute value of the amount of energy units consumed by an account in the year indicated.</description>
        <inlineHelpText>The annual volume of usage for the commodity or resource</inlineHelpText>
        <label>Annual Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <description>Annual Spend is the total amount of money expended by the account for the amount of energy of the indicated type and in the indicated year.</description>
        <inlineHelpText>The annual spend associated with the commodity or resource</inlineHelpText>
        <label>Annual Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EnergySupplierContractEnd__c</fullName>
        <description>Energy Supplier Contract End</description>
        <inlineHelpText>The date the contract will end with the current energy supplier named above</inlineHelpText>
        <label>Energy Supplier Contract End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnergySupplier__c</fullName>
        <description>Energy Supplier</description>
        <inlineHelpText>The name of the current energy supplier.  If necessary, indicate for which region the supplier provides service.</inlineHelpText>
        <label>Energy Supplier</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EnergySupplyAdvisorContractEnd__c</fullName>
        <description>Energy Supply Advisor Contract End</description>
        <inlineHelpText>The date the contract will end with the current energy supply advisor named above</inlineHelpText>
        <label>Energy Supply Advisor Contract End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnergySupplyAdvisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Energy Supply Advisor</description>
        <inlineHelpText>Select the current energy supply advisor who is a competitor of Schneider Electric.  If the competitor is not found in the database, select Other and type the name.</inlineHelpText>
        <label>Energy Supply Advisor</label>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipName>Account_Energy_Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EnergySupplySustainablity__c</fullName>
        <description>Holds the Energy Supply &amp; Sustainability</description>
        <label>Energy Supply &amp; Sustainability</label>
        <referenceTo>EnergySupplySustainability__c</referenceTo>
        <relationshipLabel>Commodity Usage</relationshipLabel>
        <relationshipName>Account_Energy_Usages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EnergyType__c</fullName>
        <description>Commodity defines which type of energy is used by that account or enterprise.</description>
        <inlineHelpText>Select the commodity or resource for which you will describe the usage.</inlineHelpText>
        <label>Commodity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electricity</fullName>
                </value>
                <value>
                    <fullName>Natural Gas</fullName>
                </value>
                <value>
                    <fullName>Propane</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
                <value>
                    <fullName>Waste</fullName>
                </value>
                <value>
                    <fullName>Diesel/Fuel</fullName>
                </value>
                <value>
                    <fullName>Carbon</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HelpText__c</fullName>
        <formula>&quot;Enter the annual energy usage at the account.  Please indicate the Usage Year, Scope of Usage, Type of Commodity and the corresponding Cost to the account. The expected units of measure for each type are as follows:  Electric: kWh (kilowatt-hour), Natural Gas: Dth (decatherm), Propane: Gal (gallon) and Diesel: Gal(gallon).&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;Help Text&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherNotes__c</fullName>
        <description>Notes</description>
        <inlineHelpText>Include any additional notes about the account&apos;s commodity or resource usage and spend here.</inlineHelpText>
        <label>Other Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sites__c</fullName>
        <description>Sites</description>
        <inlineHelpText>The number of sites the usage data describes</inlineHelpText>
        <label>Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SustainabilityAdvisorContractEnd__c</fullName>
        <description>Sustainability Advisor Contract End</description>
        <inlineHelpText>The date the contract will end with the current sustainability or environmental advisor named above</inlineHelpText>
        <label>Sustainability Advisor Contract End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SustainabilityAdvisor__c</fullName>
        <description>Sustainability Advisor</description>
        <inlineHelpText>Select the current sustainability or environmental advisor who is a competitor of Schneider Electric.  If the competitor is not found in the database, select Other and type the name.</inlineHelpText>
        <label>Sustainability Advisor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <description>Units</description>
        <inlineHelpText>Select the units of measure related to the annual volume entered.</inlineHelpText>
        <label>Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>kWh</fullName>
                </value>
                <value>
                    <fullName>Tons</fullName>
                </value>
                <value>
                    <fullName>Cubic Meters</fullName>
                </value>
                <value>
                    <fullName>Gallons</fullName>
                </value>
                <value>
                    <fullName>Liters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UsageScope__c</fullName>
        <description>Scope defines the perimeter of an account that the energy was used.</description>
        <inlineHelpText>Select whether the usage data relates to the single site or corporate-wide.</inlineHelpText>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>It represents the calendar year in which the energy for that was used</description>
        <inlineHelpText>The year for which the usage data describes</inlineHelpText>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Commodity Usage</label>
    <nameField>
        <displayFormat>AEU-{0000}</displayFormat>
        <label>Energy Commodity Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commodity Usage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>